# macd-trading-bot-cpp

./: .clang-format  .clang-format-new  .clangd  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  async_rest_client.md  async_rest_client_flexible_connections_plan.md  build.sh  configure.sh  generated_description.md  git-commit-with-hooks.sh  requirements.txt  run_tests.sh  setup-hooks.sh
.claude/: settings.json  settings.local.json
.cursor/rules/: async-networking.mdc  building-code.mdc  cpp-standards.mdc  logging-standards.mdc  project-architecture.mdc  testing-patterns.mdc  trading-domain.mdc
.devcontainer/: .zshrc  Dockerfile  devcontainer.json
.github/workflows/: auto-generate-pr-desc.yml  claude-pr-assistant.yml  claude.yml  claude_pr_creation.yml  cmake-single-platform.yml  pre-commit.yml  run_unit_tests.yml  test.yml  test_web_socket_session.yml
alpaca_trade_client/: CMakeLists.txt
alpaca_trade_client/include/alpaca_trade_client/: account.hpp  alpaca_trade_client.hpp  enum_serialization.hpp  orders.hpp  position.hpp
alpaca_trade_client/src/: alpaca_trade_client.cpp  json_utils.cpp  main.cpp
alpaca_trade_client/tests/: CMakeLists.txt  TestAlpacaTradeClientIntegration.cpp
async_rest_client/: CMakeLists.txt  planning.md
async_rest_client/include/async_rest_client/: async_rest_client.hpp  base_task.hpp  concepts.hpp  connection_context.hpp  formatter.hpp  request_formatter.hpp  typed_task.hpp  utils.hpp
async_rest_client/src/: async_rest_client.cpp  typed_task.cpp  utils.cpp
async_rest_client/tests/: CMakeLists.txt  TestAsyncRestClient.cpp  TestAsyncRestClientBasic.cpp  TestAsyncRestClientConnect.cpp  TestAsyncRestClientDelete.cpp  TestAsyncRestClientGet.cpp  TestAsyncRestClientIntegration.cpp  TestAsyncRestClientPatch.cpp  TestAsyncRestClientPost.cpp  TestAsyncRestClientUtils.cpp  test_main.cpp
cmake/: linux-clang-gdb.cmake  linux-gcc.cmake
examples/: CMakeLists.txt
include/: AlpacaWSMarketFeed.hpp  Bar.hpp  BarAggregator.hpp  IndicatorConfig.hpp  IndicatorEngine.hpp  IndicatorRegistrar.hpp  IndicatorRegistry.hpp  LoggingUtils.hpp  MacdAtrStrategy.hpp  Strategy.hpp  Utils.hpp  WebSocketSession.hpp  alpaca_trade_client.hpp  async_rest_client.hpp  logging_utils.hpp  types.hpp  web_socket_session.hpp
include/alpaca_trade_client/: alpaca_trade_client.hpp  orders.hpp
include/async_rest_client/: async_rest_client.hpp  request_builder_empty_body.hpp  request_builder_fwd.hpp  request_builder_string_body.hpp  response.hpp  response_parser_fwd.hpp  response_parser_string_body.hpp  url_components.hpp
include/async_rest_client/detail/: base_task.hpp  request_builder_base.hpp  type_traits.hpp  typed_task.hpp
include/indicators/: ATR.hpp  EMA.hpp  EMACalculator.hpp  Indicator.hpp  MACD.hpp  ScalarEMA.hpp
include/indicators/ohlcv/: ATR.hpp  EMA.hpp  MACD.hpp  OHLCVIndicator.hpp
logger/: CMakeLists.txt  my_logger.cpp  my_logger.hpp
logging_utils/: CMakeLists.txt
logging_utils/src/: LoggingUtils.cpp
scripts/: README.md  build.sh  configure.sh  generate-pr-description.js  install-test-utils.sh  logging.sh  run_tests.sh
src/: AlpacaWSMarketFeed.cpp  BarAggregator.cpp  CMakeLists.txt  IndicatorEngine.cpp  LoggingUtils.cpp  MacdAtrStrategy.cpp  Strategy.cpp  Utils.cpp  WebSocketSession.cpp  alpaca_trade_client.cpp  async_rest_client.cpp  logging_utils.cpp  main.cpp  web_socket_session.cpp
src/alpaca_trade_client/: alpaca_trade_client.cpp  orders.cpp
src/async_rest_client/: async_rest_client.cpp  url_components.cpp
src/indicators/: ATR.cpp  EMA.cpp  EMACalculator.cpp  IndicatorRegistry.cpp  MACD.cpp  ScalarEMA.cpp
src/net/: CMakeLists.txt  web_socket_session.hpp
test-utils/: HistoricalAlpacaWSEndpoint.py  HistoricalBarsToCsv.py  PLTR_2025-05-19_2025-05-23_1min_market_hours.csv  build_py_utils.sh  historical_alpaca_ws_endpoint.py  historical_bars_to_csv.py  install.sh  requirements.txt  run_historical_client.sh  start-websocat-echo.sh  start_websocat_echo.sh
tests/: CMakeLists.txt  HistoricalDataTestUtils.hpp  TestAlpacaTradeClient.cpp  TestAlpacaWSMarketFeed.cpp  TestAsyncRestClientConnection.cpp  TestAsyncRestClientGet.cpp  TestAsyncRestClientRequestResponse.cpp  TestAsyncRestClientTaskSystem.cpp  TestBar.cpp  TestBarAggregatorIntegration.cpp  TestIndicatorEngine.cpp  TestIndicators.cpp  TestStrategy.cpp  TestUtils.cpp  TestWebSocketSession.cpp  start-websocat-echo.sh  test_alpaca_ws_market_feed.cpp  test_web_socket_session.cpp
